--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,15 @@ pre-commit = "^2.20.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
+line_length = 120
+src_paths = ["src", "tests"]
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q --ignore docs"
+testpaths = [
+    "tests",
+]
