--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
   - repo: https://github.com/python-poetry/poetry
-    rev: ''  # add version here
+    rev: '1.2.1'  # add version here
     hooks:
       - id: poetry-check
       - id: poetry-lock
@@ -25,7 +25,7 @@ repos:
         args: [--chars,"  "]
 
   - repo: https://github.com/asottile/pyupgrade
-    rev: v2.34.0
+    rev: v2.38.2
     hooks:
       - id: pyupgrade
         args:
@@ -45,7 +45,7 @@ repos:
         language_version: python3
 
   -   repo: https://github.com/psf/black
-      rev: 22.3.0
+      rev: 22.8.0
       hooks:
       - id: black
         language_version: python3
