--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,32 +1,48 @@
-[tool.poetry]
-name = "viper"
-version = "2022.10.0"
-description = ""
-authors = ["National Radio Astronomy Observatory <casa-feedback@nrao.edu>"]
-license = "Apache License 2.0"
+[project]
+name = "astroviper"
+version = "0.0.1"
+description = "Astro Visibility and Image Parallel Execution Reduction"
+authors = [
+    {name = "Jan-Willem Steeb", email="jsteeb@nrao.edu"},
+]
+license = {file = "LICENSE.txt"}
 readme = "README.md"
+requires-python = ">= 3.8, < 3.12"
 
-[tool.poetry.dependencies]
-python = "^3.8"
-dask = "^2022.9.2"
-distributed = "^2022.9.2"
+dependencies = [
+'astropy',
+'dask',
+'distributed',
+'gdown',
+'matplotlib',
+'numba>=0.57.0',
+'numpy',
+'prettytable',
+'pytest',
+'pytest-cov',
+'pytest-html',
+'scipy',
+'xarray',
+'zarr',
+'bokeh',
+'jupyterlab',
+'pyarrow',
+'python_casacore>=3.5.2; sys_platform != "darwin" '
+]
 
-[tool.poetry.group.dev.dependencies]
-pytest = "^7.1.3"
-pre-commit = "^2.20.0"
 
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
-[tool.isort]
-profile = "black"
-line_length = 120
-src_paths = ["src", "tests"]
-
-[tool.pytest.ini_options]
-minversion = "6.0"
-addopts = "-ra -q --ignore docs"
-testpaths = [
-    "tests",
+[project.optional-dependencies]
+docs = [
+    'ipykernel',
+    'ipympl',
+    'ipython',
+    'jupyter-client',
+    'nbsphinx',
+    'recommonmark',
+    'scanpydoc',
+    'sphinx-autoapi',
+    'sphinx-autosummary-accessors',
+    'sphinx_rtd_theme',
+    'twine',
+    'pandoc'
 ]
