--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,8 @@ dependencies = [
 'gdown',
 'graphviper',
 'matplotlib',
-'numba>=0.57.0',
-'numpy<=1.25.0',
+'numba>=0.59.0',
+'numpy<1.27.0',
 'prettytable',
 'pytest',
 'pytest-cov',
@@ -30,7 +30,8 @@ dependencies = [
 'pyarrow',
 'graphviz',
 'xradio',
-'python_casacore>=3.5.2; sys_platform != "darwin" '
+'python_casacore>=3.5.2; sys_platform != "darwin" ',
+ipympl
 ]
 
 
