--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
 'graphviper',
 'matplotlib',
 'numba>=0.59.0',
-'numpy<1.27.0',
+'numpy==1.25.0',
 'prettytable',
 'pytest',
 'pytest-cov',
