--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 license = {file = "LICENSE.txt"}
 readme = "README.md"
-requires-python = ">= 3.9, < 3.12"
+requires-python = ">= 3.9, < 3.13"
 
 dependencies = [
 'astropy',
@@ -17,7 +17,7 @@ dependencies = [
 'graphviper',
 'matplotlib',
 'numba>=0.59.0',
-'numpy<1.27.0',
+'numpy',
 'prettytable',
 'pytest',
 'pytest-cov',
@@ -30,7 +30,7 @@ dependencies = [
 'pyarrow',
 'graphviz',
 'xradio',
-'python_casacore>=3.5.2; sys_platform != "darwin" ',
+'python_casacore>=3.6.1; sys_platform != "darwin" ',
 'ipympl'
 ]
 
