--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "astroviper"
-version = "0.0.18"
+version = "0.0.19"
 description = "Astro Visibility and Image Parallel Execution Reduction"
 authors = [
     {name = "Jan-Willem Steeb", email="jsteeb@nrao.edu"},
@@ -10,7 +10,8 @@ readme = "README.md"
 requires-python = ">= 3.11, < 3.14"
 
 dependencies = [
-'graphviper>=0.0.34'
+'graphviper>=0.0.34',
+'xradio>=0.0.58'
 ]
 
 [project.optional-dependencies]
