--- a/src/astroviper/_domain/_imaging/deconvolver/hogbom/CMakeLists.txt
+++ b/src/astroviper/_domain/_imaging/deconvolver/hogbom/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.15...3.27)
 
-project(hogbom_deconvolve 
-    VERSION 0.1.0
+project(astroviper_hogbom
+    VERSION ${CMAKE_PROJECT_VERSION}
     DESCRIPTION "Hogbom CLEAN algorithm implementation"
     LANGUAGES CXX)
 
@@ -20,24 +20,24 @@ set(SOURCES
 )
 
 # Create pybind11 module
-pybind11_add_module(hogbom_deconvolve ${SOURCES})
+pybind11_add_module(_hogbom_ext ${SOURCES})
 
 # Set target properties
-target_include_directories(hogbom_deconvolve PRIVATE 
+target_include_directories(_hogbom_ext PRIVATE 
     include
 )
 
 # Compiler-specific options
-target_compile_features(hogbom_deconvolve PRIVATE cxx_std_17)
+target_compile_features(_hogbom_ext PRIVATE cxx_std_17)
 
 # Set optimization flags
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-    target_compile_options(hogbom_deconvolve PRIVATE
+    target_compile_options(_hogbom_ext PRIVATE
         $<$<CXX_COMPILER_ID:GNU,Clang>:-O0 -g>
         $<$<CXX_COMPILER_ID:MSVC>:/Od /Zi>
     )
 else()
-    target_compile_options(hogbom_deconvolve PRIVATE
+    target_compile_options(_hogbom_ext PRIVATE
         $<$<CXX_COMPILER_ID:GNU,Clang>:-O2 -march=native>
         $<$<CXX_COMPILER_ID:MSVC>:/O2>
     )
@@ -45,18 +45,18 @@ endif()
 
 # Platform-specific options
 if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-    target_compile_options(hogbom_deconvolve PRIVATE -stdlib=libc++)
-    target_link_options(hogbom_deconvolve PRIVATE -stdlib=libc++)
+    target_compile_options(_hogbom_ext PRIVATE -stdlib=libc++)
+    target_link_options(_hogbom_ext PRIVATE -stdlib=libc++)
 endif()
 
 if(MSVC)
-    target_compile_options(hogbom_deconvolve PRIVATE /EHsc)
+    target_compile_options(_hogbom_ext PRIVATE /EHsc)
 endif()
 
 # Version info
-target_compile_definitions(hogbom_deconvolve PRIVATE 
+target_compile_definitions(_hogbom_ext PRIVATE 
     VERSION_INFO="${PROJECT_VERSION}"
 )
 
 # Install the module in the python package directory
-install(TARGETS hogbom_deconvolve DESTINATION hogbom_deconvolve)
+install(TARGETS _hogbom_ext DESTINATION astroviper/_domain/_imaging/deconvolver/hogbom)
