--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,13 @@
 [project]
 name = "astroviper"
-version = "0.0.31"
+version = "0.0.30"
 description = "Astro Visibility and Image Parallel Execution Reduction"
-authors = [{ name = "Jan-Willem Steeb", email = "jsteeb@nrao.edu"}]
+authors = [{ name = "Jan-Willem Steeb", email = "jsteeb@nrao.edu"},
+    {name = "Dave Mehringer", email="dmehring@nrao.edu"},
+    {name = "Kumar Golap", email="kgolap@nrao.edu"},
+    {name = "Takahiro Tsutsumi", email="ttsutsum@nrao.edu"},
+    {name = "Srikrishna Sekhar", email="ssekhar@nrao.edu"},
+]
 license = { file = "LICENSE.txt" }
 readme = "README.md"
 requires-python = ">=3.11,<3.14"
