--- a/.github/workflows/python-testing-integration.yml
+++ b/.github/workflows/python-testing-integration.yml
@@ -15,5 +15,7 @@ on:
 jobs:
   test:
     uses: casangi/toolviper/.github/workflows/python-testing-integration-template.yml@main
+    with:
+      xradio_ref: '470-changes-needed-for-astroviper'
     secrets:
       DISPATCH_TOKEN: ${{ secrets.DISPATCH_TOKEN }}
