Move to using nrao/gh-actions-templates-public.

--- a/.github/workflows/python-testing-macos.yml
+++ b/.github/workflows/python-testing-macos.yml
@@ -12,5 +12,5 @@ on:
       - '**.rst'
 
 jobs:
-  call-testing-linux:
-    uses: casangi/toolviper/.github/workflows/python-testing-macos-template.yml@main
+  call-testing-macos:
+    uses: nrao/gh-actions-templates-public/.github/workflows/python-testing-macos-template.yml@main
