--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -4,5 +4,5 @@ name: Black
 on: [push, pull_request]
 
 jobs:
-    call-testing-linux:
-      uses: casangi/toolviper/.github/workflows/black-template.yml@main
+    call-black:
+      uses: nrao/gh-actions-templates-public/.github/workflows/black-template.yml@main
