--- a/.github/workflows/python-testing-integration.yml
+++ b/.github/workflows/python-testing-integration.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   test:
-    uses: casangi/toolviper/.github/workflows/python-testing-integration-template.yml@main
+    uses: nrao/gh-actions-templates-public/.github/workflows/python-testing-integration-template.yml@main
     with:
       xradio_ref: '470-changes-needed-for-astroviper'
     secrets:
