--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ requires-python = ">=3.11,<3.14"
 dependencies = [
   "graphviper>=0.0.36",
   "numpy>=1.20.0",
-  "xradio==1.1.3",
+  "xradio==1.1.12a0[zarr]",
 ]
 
 [project.optional-dependencies]
