changed the wrong line in pyproject, fixing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,8 @@ requires-python = ">=3.11,<3.14"
 # ✅ Core runtime dependencies must live here
 dependencies = [
   "graphviper>=0.0.36",
-  "numpy>=1.20.0",
-  "xradio[zarr]>=2.4",
+  "numpy>=4.2.0",
+  "xradio[zarr]>=1.1.0"
   "numba",
 ]
 
